# iSHAKE

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
lib/libkeccak-tiny/: keccak-tiny.c  keccak-tiny.h  libkeccak-tiny-small.dylib  libkeccak-tiny.dylib
src/: combine.c  ishake.c  ishake.h  ishakesum.c  ishakesumd.c  modulo_arithmetics.c  modulo_arithmetics.h  sha3sum.c  sha3sumd.c  utils.c  utils.h
tests/: setup.php  test.php  testPerformance.c  test_commands.py  test_output.py  timing.h
tests/ishake/: iSHAKE128ShortMsg.rsp
utils/: ishake.py  ishakelib.py  requirements.txt  setup_dir.py
